@@ -1,6 +1,8 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 20??, PHP 5.3.0
+- Added ability to use SplArrays instead of plain arrays in ext/soap.
+  (Joshua Reese, Dmitry)
 - Added "?:" operator. (Marcus)
 - Added stream_supports_lock() function. (Benjamin Schulz)
 - Added msg_queue_exists() function. (Benjamin Schulz)
